--- a/Tutte.ipynb
+++ b/Tutte.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
-    "from math import log, exp, factorial\n",
+    "from math import log, exp, factorial, ceil\n",
     "from random import random\n",
-    "from collections import Counter\n",
-    "import numpy as np"
+    "from collections import Counter, defaultdict\n",
+    "import numpy as np\n",
+    "COUNT = 0"
    ]
   },
   {
@@ -26,6 +27,7 @@
     "LFMEMO = {}\n",
     "def logfact(n):\n",
     "    # return ln(n!)\n",
+    "    # TODO: make smarter\n",
     "    if n in LFMEMO:\n",
     "        return LFMEMO[n]\n",
     "    lf = sum(log(i) for i in range(1, n+1))\n",
@@ -34,6 +36,8 @@
     "\n",
     "LTMEMO = {}\n",
     "def logtutte(n, m):\n",
+    "    global COUNT\n",
+    "    COUNT = COUNT + 1\n",
     "    if n < 0 or m < 0:\n",
     "        return -float('inf')\n",
     "    #if (n, m) in LTMEMO:\n",
@@ -43,8 +47,8 @@
     "    #LTMEMO[(n, m)] = val\n",
     "    return val\n",
     "\n",
-    "def logapprox(n, m):\n",
-    "    return logfact(2*m) - 2*logfact(m) - log(m+1) + n*log(13.5) - log(n**2.5)"
+    "def tutte(n, m):\n",
+    "    return round(exp(logtutte(n, m)))"
    ]
   },
   {
@@ -74,7 +78,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -98,12 +103,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "def choose(n, m, logremaining_graphs):\n",
+    "    r = random()\n",
+    "    total = 0.0\n",
+    "    for j in range(0, m):\n",
+    "        for k in range(0, n+1):\n",
+    "            logcount = logtutte(k, j) + logtutte(n-k, m-j-1)\n",
+    "            p = exp(logcount - logremaining_graphs)\n",
+    "            total += p\n",
+    "            if total >= r:\n",
+    "                return k, j\n",
+    "            # there are [count] triangulations with k internal and j+2 external vertices on one side and the rest on the other\n",
+    "    raise ValueError(\"should have returned something...%s\"%total)\n",
+    "\n",
+    "# better method for choosing k, j\n",
+    "def choose2(n, m, logremaining_graphs):\n",
+    "    r = random()\n",
+    "    total = 0.0\n",
+    "    if m >= (n+1):\n",
+    "        for d in range(n+1):\n",
+    "            count = ((d+1)*m)//(n+1)\n",
+    "            for c in range(count):\n",
+    "                k, j = (d - int(ceil((n+1)*(c+1)/m)) + 1, c)\n",
+    "                amt = logtutte(k, j) + logtutte(n-k, m-j-1)\n",
+    "                amt = exp(amt - logremaining_graphs)\n",
+    "                total += 2*amt\n",
+    "                if n == n-k and m == m-j-1:\n",
+    "                    total -= amt\n",
+    "                if total >= r:\n",
+    "                    if random() < 0.5:\n",
+    "                        return k, j\n",
+    "                    else:\n",
+    "                        return n-k, m-j-1\n",
+    "    else:\n",
+    "        for d in range(m):\n",
+    "            count = ((d+1)*(n+1))//m\n",
+    "            for c in range(count):\n",
+    "                k, j = (c, d - int(ceil(m*(c+1)/(n+1))) + 1)\n",
+    "                amt = logtutte(k, j) + logtutte(n-k, m-j-1)\n",
+    "                amt = exp(amt - logremaining_graphs)\n",
+    "                total += 2*amt\n",
+    "                if n == n-k and m == m-j-1:\n",
+    "                    total -= amt\n",
+    "                if total >= r:\n",
+    "                    if random() < 0.5:\n",
+    "                        return k, j\n",
+    "                    else:\n",
+    "                        return n-k, m-j-1\n",
+    "    raise ValueError(\"should have returned something...%s\"%total)\n",
+    "\n",
     "def logmake_graph(G, internal, external):\n",
     "    n = len(internal)\n",
     "    m = len(external)-2\n",
@@ -118,20 +172,8 @@
     "        G.append(triangle)\n",
     "        logmake_graph(G, internal[1:], external + [internal[0]])\n",
     "    else:\n",
-    "        logcounts = []\n",
-    "        choices = []\n",
-    "        for j in range(0, m):\n",
-    "            for k in range(0, n+1):\n",
-    "                logcount = logtutte(k, j) + logtutte(n-k, m-j-1)\n",
-    "                logcounts.append(logcount)\n",
-    "                # there are [count] triangulations with k internal and j+2 external vertices on one side and the rest on the other\n",
-    "                choices.append((k, j))\n",
-    "        high = max(logcounts)\n",
-    "        counts = [exp(c-high) for c in logcounts]\n",
-    "        total = sum(counts)\n",
-    "        counts = [c/total for c in counts]\n",
-    "        choice = choices[np.random.choice(len(choices), p=counts)]\n",
-    "        k, j = choice\n",
+    "        logremaining_graphs = logtotal_graphs + log(1 - exp(logadd_internal - logtotal_graphs))\n",
+    "        k, j = choose2(n, m, logremaining_graphs)\n",
     "        triangle = (external[0], external[1], external[j+2])\n",
     "        G.append(triangle)\n",
     "        left = external[1:j+3]\n",
@@ -149,19 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9600 9600.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# show that the number of graphs generated by this algorithm is the same(ish) as T(n, m)\n",
     "from collections import Counter\n",
@@ -173,34 +207,25 @@
     "    external = range(0, m+2)\n",
     "    G = []\n",
     "    graphs[tuple(logmake_graph(G, internal, external))] += 1\n",
-    "G = []\n",
-    "G = make_graph(G, internal, external)\n",
-    "print len(graphs), tutte(n, m)"
+    "print len(graphs), exp(logtutte(n, m))\n",
+    "#print graphs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "447862.876\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# estimating runtime -- assumed n^2*log(n)\n",
+    "# estimating runtime -- assumed n^1.5\n",
     "COUNT = 0\n",
-    "SIZE = 640\n",
-    "for _ in range(100):\n",
+    "SIZE = 2560\n",
+    "for _ in range(20):\n",
     "    G = []\n",
     "    sample_graph(*logsample(SIZE))\n",
-    "print COUNT/100"
+    "print COUNT/20"
    ]
   },
   {
@@ -224,6 +249,95 @@
     "for _ in range(50):\n",
     "    x = sample_graph(*logsample(200))\n",
     "print time.time() - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# lol this doesn't really work\n",
+    "def make_dual(g):\n",
+    "    triples = set()\n",
+    "    names = []\n",
+    "    pairs = defaultdict(set)\n",
+    "    for triple in g:\n",
+    "        name = str(triple)\n",
+    "        if triple in triples:\n",
+    "            name += \"'\"\n",
+    "        triples.add(triple)\n",
+    "        triple = sorted(triple)\n",
+    "        pairs[tuple((triple[0], triple[1]))].add(name)\n",
+    "        pairs[tuple((triple[1], triple[2]))].add(name)\n",
+    "        pairs[tuple((triple[0], triple[2]))].add(name)\n",
+    "        names.append(name)\n",
+    "    for p in pairs:\n",
+    "        if len(pairs[p]) > 1:\n",
+    "            print pairs[p]\n",
+    "\n",
+    "make_dual(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.setrecursionlimit(5000)\n",
+    "x = sample_graph(*logsample(10000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         1522205 function calls (1516212 primitive calls) in 0.750 seconds\n",
+      "\n",
+      "   Ordered by: standard name\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "   185695    0.338    0.000    0.561    0.000 <ipython-input-236-900dbb94d879>:12(logtutte)\n",
+      "   924920    0.189    0.000    0.189    0.000 <ipython-input-236-900dbb94d879>:2(logfact)\n",
+      "        1    0.005    0.005    0.022    0.022 <ipython-input-238-1ff0ae31bde7>:1(logsample)\n",
+      "     1998    0.128    0.000    0.673    0.000 <ipython-input-239-d5a003a618f7>:14(choose2)\n",
+      "   5994/1    0.030    0.000    0.728    0.728 <ipython-input-239-d5a003a618f7>:45(logmake_graph)\n",
+      "        1    0.000    0.000    0.728    0.728 <ipython-input-239-d5a003a618f7>:69(sample_graph)\n",
+      "        1    0.000    0.000    0.750    0.750 <string>:1(<module>)\n",
+      "        1    0.000    0.000    0.000    0.000 getlimits.py:94(__new__)\n",
+      "    11989    0.001    0.000    0.001    0.000 {len}\n",
+      "    87853    0.008    0.000    0.008    0.000 {math.ceil}\n",
+      "    95845    0.012    0.000    0.012    0.000 {math.exp}\n",
+      "   186982    0.034    0.000    0.034    0.000 {math.log}\n",
+      "        1    0.000    0.000    0.000    0.000 {max}\n",
+      "     7993    0.001    0.000    0.001    0.000 {method 'append' of 'list' objects}\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'choice' of 'mtrand.RandomState' objects}\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'get' of 'dict' objects}\n",
+      "     7991    0.001    0.000    0.001    0.000 {method 'random' of '_random.Random' objects}\n",
+      "     4936    0.003    0.000    0.003    0.000 {range}\n",
+      "        1    0.000    0.000    0.000    0.000 {sum}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cProfile\n",
+    "cProfile.run('sample_graph(*logsample(2000))')"
    ]
   }
  ],
